fixed the slider on mobile

--- a/css/main_styles.css
+++ b/css/main_styles.css
@@ -1360,6 +1360,15 @@ section {
         flex: 0 0 100%;
         max-width: 100%
     }
+
+    .slider-nav-right,
+.slider-nav-left {
+
+opacity:1;
+visibility:visible;
+
+
+}
 }
 
 @media only screen and (max-width:991px) {
